changes in the requirement.txt

--- a/price/templates/result.html
+++ b/price/templates/result.html
@@ -9,22 +9,22 @@
     <title>Stock Price prediction</title>
 </head>
 {% load static %}
-<body style="background-image: url('{% static 'rak.jpg'%}'); background-position: center;
+<body style="background-image: url('{% static 'rak.png'%}'); background-position: center;
   background-repeat: no-repeat;
   background-size: cover;" >
 <center>
     <p>
-<img src="{% static 'ram.jpg' %}" width="75%" height="55%" class="img-fluid"><br>
+<img src="{% static 'ram.png' %}" width="75%" height="55%" class="img-fluid"><br>
     </p>
 
 
 <p>
 
-<img src="{% static 'sam.jpg' %}" width="75%" height="55%" class="img-fluid"><br>
+<img src="{% static 'sam.png' %}" width="75%" height="55%" class="img-fluid"><br>
     </p>
 
     <p>
-<img src="{% static 'tam.jpg' %}" width="75%" height="55%" class="img-fluid"><br>
+<img src="{% static 'tam.png' %}" width="75%" height="55%" class="img-fluid"><br>
     </p>
 
     </center>
