changes in the requirement.txt

--- a/price/templates/home.html
+++ b/price/templates/home.html
@@ -10,7 +10,7 @@
 </head>
 {% load static %}
 <font color="white">
-<body style="background-image: url('{% static 'rak.jpg'%}'); background-position: center;
+<body style="background-image: url('{% static 'rak.png'%}'); background-position: center;
   background-repeat: no-repeat;
   background-size: cover; height: 100%;">
 <style>
