changes in the requirement.txt

--- a/price/templates/home.html
+++ b/price/templates/home.html
@@ -23,7 +23,7 @@ overflow-y:hidden;}
 
     <h1>Stock Price Prediction </h1>
     <h2> Made By : </h2>
-    <h3> Sarika </h3><br>
+    <h3> Sarika borikar,Payal bhute,Gunjan harde </h3><br>
     <form action="predict" method="post">
         <div class="form-group">
          {% csrf_token %}
